@@ -6,13 +6,31 @@ EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
+		Debug|x64 = Debug|x64
+		Debug-64|Win32 = Debug-64|Win32
+		Debug-64|x64 = Debug-64|x64
 		Release|Win32 = Release|Win32
+		Release|x64 = Release|x64
+		Release-64|Win32 = Release-64|Win32
+		Release-64|x64 = Release-64|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
 		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug|Win32.ActiveCfg = Debug|Win32
 		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug|Win32.Build.0 = Debug|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug|x64.ActiveCfg = Debug|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug|x64.Build.0 = Debug|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug-64|Win32.ActiveCfg = Debug-64|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug-64|Win32.Build.0 = Debug-64|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug-64|x64.ActiveCfg = Debug-64|x64
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Debug-64|x64.Build.0 = Debug-64|x64
 		{51117F20-9323-4EEE-964D-760C818DF80D}.Release|Win32.ActiveCfg = Release|Win32
 		{51117F20-9323-4EEE-964D-760C818DF80D}.Release|Win32.Build.0 = Release|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release|x64.ActiveCfg = Release|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release|x64.Build.0 = Release|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release-64|Win32.ActiveCfg = Release-64|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release-64|Win32.Build.0 = Release-64|Win32
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release-64|x64.ActiveCfg = Release-64|x64
+		{51117F20-9323-4EEE-964D-760C818DF80D}.Release-64|x64.Build.0 = Release-64|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
